--- a/web/cedoc2/html/exemplo.html
+++ b/web/cedoc2/html/exemplo.html
@@ -245,7 +245,7 @@
                   </tr>
                 </tbody>
               </table>
-            <a class="btn contato" href="http://cmais.com.br/cedoc/contato?ref=http://cmais.com.br/cedoc/html/exemplo.html">contato</a>
+            <a class="btn contato" href="http://cmais.com.br/cedoc2/contato?ref=http://cmais.com.br/cedoc/html/exemplo.html">contato</a>
             <a class="voltar" href="#">&laquo; voltar</a>
           </div>
                     
