--- a/web/cedoc2/html/Filmes_10002.html
+++ b/web/cedoc2/html/Filmes_10002.html
@@ -182,7 +182,7 @@
       <li><span></span><a href="/cedoc/resultado-busca" title="Acervo">acervo</a></li>
       <li class="ativo"><span></span><a href="/cedoc/contato" title="Contato">contato</a></li>
       <li>
-        <form class="form-search pull-right" action="/cedoc2/busca.php">
+        <form class="form-search pull-right" action="/cedoc/busca.php">
           <div class="input-append">
             <input type="hidden" name="output" value="search">
             <button type="submit" class="btn"><i class="icon-search"></i></button>
