--- a/web/ss/server/admin.html
+++ b/web/ss/server/admin.html
@@ -184,7 +184,8 @@
         //serverUrl2 = 'ws://172.20.18.133:4443/secondscreen';
         //serverUrl2 = 'ws://200.136.27.32:4443/secondscreen';
         //serverUrl2 = 'ws://200.136.27.32:443/secondscreen';
-        serverUrl2 = 'ws://172.20.18.133:4442/secondscreen';
+        //serverUrl2 = 'ws://172.20.18.133:4442/secondscreen';
+        serverUrl2 = 'ws://cmais.com.br:4442/secondscreen';
         if (window.MozWebSocket) {
           socket2 = new MozWebSocket(serverUrl2);
         } else if (window.WebSocket) {
