--- a/web/ss/s/admin.html
+++ b/web/ss/s/admin.html
@@ -143,6 +143,7 @@
                     <option value="content">Conteúdo</option>
                     <option value="people">Pessoa</option>
                     <option value="place">Lugar</option>
+                    <option value="poll">Enquete</option>
                   </select>
                   <input type="text" id="new-content-tag" class="input-xlarge typeahead" placeholder="tag or slug" autocomplete="off" />
                 </div>
