--- a/web/ss/s/admin.html
+++ b/web/ss/s/admin.html
@@ -441,7 +441,7 @@
       
       $(document).ready(function() {
 
-        $('.typeahead').autocomplete({
+        $('#new-content-tag').autocomplete({
           //serviceUrl: '/ss/server/search.php',
           serviceUrl: '/ajax/search',
           search  : function(){$(this).addClass('loading');},
