--- a/web/ss/s/admin.html
+++ b/web/ss/s/admin.html
@@ -39,9 +39,8 @@
         background-repeat: no-repeat;
         background-position: right;
       }
-      .loading {
-        background: white url('../img/loading6.gif') right center no-repeat;
-      }
+      .ui-autocomplete-loading { background: white url('../img/loading6.gif') right center no-repeat; }
+      .loading { background: white url('../img/loading6.gif') right center no-repeat; }
       .autocomplete-suggestions { border: 1px solid #999; background: #FFF; cursor: default; overflow: auto; }
       .autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
       .autocomplete-selected { background: #F0F0F0; }
