--- a/web/ss/s/admin.html
+++ b/web/ss/s/admin.html
@@ -443,8 +443,8 @@
         $('#new-content-tag').autocomplete({
           //serviceUrl: '/ss/server/search.php',
           serviceUrl: '/ajax/search',
-          search  : function(){$(this).addClass('loading');},
-          open    : function(){$(this).removeClass('loading');},
+          search  : function(){ $('.typeahead').addClass('loading'); console.log(1); },
+          open    : function(){ $('.typeahead').removeClass('loading'); console.log(2); },
           onSelect: function (suggestion) {
             $('#new-content-save').addClass('disabled');
             //alert('You selected: ' + suggestion.value + ', ' + suggestion.data);
