--- a/web/ss/s/admin.html
+++ b/web/ss/s/admin.html
@@ -557,6 +557,12 @@
 
         initClient();
       });
+
+      window.onload=function(){
+        window.onbeforeunload = function(){
+          return "NÃO FECHE ESTA JANELA!!!!!!!";
+        }
+      }
       </script>
 
       <hr />
