--- a/web/ss/s/admin.html
+++ b/web/ss/s/admin.html
@@ -286,6 +286,7 @@
           if($(this).hasClass("disabled")) return false;
           $(this).addClass("disabled");
           $('#new-content').show();
+          $('#title').hide();
           $('#new-content-tag').focus();
         });
 
