--- a/web/ss/s/admin.html
+++ b/web/ss/s/admin.html
@@ -618,14 +618,16 @@
       <script type="text/javascript">
       var editor = CKEDITOR.replace( 'new-content-html-c', {
         toolbar: [
+          { name: 'document', groups: [ 'mode', 'document', 'doctools' ], items: [ 'Source' ] },
           { name: 'clipboard', groups: [ 'clipboard', 'undo' ], items: [ 'Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ] },
+          { name: 'editing', groups: [ 'find', 'selection', 'spellchecker' ], items: [ 'Scayt' ] },
+          '/',
           { name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ], items: [ 'Bold', 'Italic', 'Strike', '-', 'RemoveFormat' ] },
           { name: 'paragraph', groups: [ 'list', 'indent', 'blocks', 'align' ], items: [ 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'Blockquote' ] },
-          { name: 'links', items: [ 'Link', 'Unlink' ] },
+          { name: 'links', items: [ 'Link', 'Unlink', 'Anchor' ] },
           { name: 'insert', items: [ 'Image', 'Table', 'HorizontalRule', 'SpecialChar' ] },
           '/',
           { name: 'styles', items: [ 'Styles', 'Format' ] },
-          { name: 'colors', items : [ 'TextColor','BGColor' ] },
           { name: 'tools', items: [ 'Maximize' ] }
         ]
       });
