--- a/web/ss/s/a.html
+++ b/web/ss/s/a.html
@@ -587,15 +587,15 @@
         
         $('#start').click(function() {
           if($(this).hasClass("disabled")) return false;
-          self.location.href='admin.php?start';
+          self.location.href='a.php?start';
         });
         $('#stop').click(function() {
           if($(this).hasClass("disabled")) return false;
-          self.location.href='admin.php?stop';
+          self.location.href='a.php?stop';
         });
         $('#restart').click(function() {
           if($(this).hasClass("disabled")) return false;
-          self.location.href='admin.php?restart';
+          self.location.href='a.php?restart';
         });
 
         $('#new-content-tag').bind('keypress', function(e) {
