--- a/web/actions/cocorico/sorteiorelampago/form.html
+++ b/web/actions/cocorico/sorteiorelampago/form.html
@@ -1,11 +1,23 @@
-<html>
-<head>
-<link href="/portal/css/tvcultura/sites/cocorico/home.css" rel="stylesheet">
-<link href="/portal/css/tvcultura/sites/cocorico/tvcocorico.css" rel="stylesheet"> 
-</head>  
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store" />
+    <meta http-equiv="Pragma" content="no-cache, no-store" />
+    <meta http-equiv="expires" content="Mon, 06 Jan 1990 00:00:01 GMT" />
+    <link rel="shortcut icon" href="http://cmais.com.br/portal/images/favicon.ico" />
+    <script src="/portal/js/jquery-1.7.2.min.js" type="text/javascript"></script>
+    <link href="/portal/css/tvcultura/sites/cocorico/bootstrap.css" rel="stylesheet">
+    <script type="text/javascript" src="/portal/js/bootstrap/bootstrap.js"></script>
+    <script type="text/javascript" src="/portal/js/bootstrap/tab.js"></script>
+    <link href="/portal/css/tvcultura/sites/cocorico/geral.css" rel="stylesheet">
+    <link href="/portal/css/tvcultura/sites/cocorico/home.css" rel="stylesheet">
+    <link href="/portal/css/tvcultura/sites/cocorico/tvcocorico.css" rel="stylesheet">
+  </head>  
+  
+  <body>
 
-<div class="destaque-home-tv interatividade span9" id="formWrapper" style="display: none">
+    <div class="destaque-home-tv interatividade span9" id="formWrapper" style="display: none">
         <div class="topo">
           <div class="bac-yellow">
             <h2>Concurso Cultural</h2>
