--- a/web/actions/cocorico/sorteiorelampago/form.html
+++ b/web/actions/cocorico/sorteiorelampago/form.html
@@ -17,7 +17,7 @@
   
   <body>
 
-    <div class="destaque-home-tv interatividade span9" id="formWrapper" style="display: none">
+    <div class="destaque-home-tv interatividade span9" id="formWrapper">
         <div class="topo">
           <div class="bac-yellow">
             <h2>Concurso Cultural</h2>
@@ -28,7 +28,7 @@
           <input type="hidden" name="test" value="1" />
          
           <!--p>
-            <?php echo $displays['destaque-principal'][0]->getDescription(); ?>
+            <?php echo $displays['destaque-principal'][0]->getDescription(); carousel
           </p-->
           <p>Diga para a gente qual convidado do dia você mais gostou e por que. As 10 melhores respostas ganham um aplicativo do Cocoricó para iPad!</p>
           <div class="row-fluid form-campos">
