--- a/web/actions/cocorico/sorteiorelampago/form.html
+++ b/web/actions/cocorico/sorteiorelampago/form.html
@@ -15,7 +15,7 @@
     <link href="/portal/css/tvcultura/sites/cocorico/tvcocorico.css" rel="stylesheet">
     <style>
       .span9 {
-        width: auto !important;
+        width: inherit !important;
       }
     </style>
   </head>  
