--- a/web/actions/cocorico/sorteiorelampago/form.html
+++ b/web/actions/cocorico/sorteiorelampago/form.html
@@ -136,6 +136,7 @@
         </div>
       </div>
       
+      <script type="text/javascript" src="/portal/js/validate/jquery.validate.js"></script>
       <script type="text/javascript">
         $(document).ready(function(){
           
