--- a/web/actions/cocorico/sorteiorelampago/form.html
+++ b/web/actions/cocorico/sorteiorelampago/form.html
@@ -30,7 +30,7 @@
           <!--p>
             <?php echo $displays['destaque-principal'][0]->getDescription(); carousel
           </p-->
-          <p>Diga para a gente qual convidado do dia você mais gostou e por que. As 10 melhores respostas ganham um aplicativo do Cocoricó para iPad!</p>
+          <p>Preencha corretamente todos os campos abaixo:</p>
           <div class="row-fluid form-campos">
             
             
