--- a/web/actions/cocorico/sorteiorelampago/form.html
+++ b/web/actions/cocorico/sorteiorelampago/form.html
@@ -20,7 +20,7 @@
     <div class="destaque-home-tv interatividade" id="formWrapper">
         <div class="topo">
           <div class="bac-yellow">
-            <h2>Concurso Cultural</h2>
+            <h2>Concorra ao prêmio!</h2>
           </div>
         </div>
         <form id="form-contato" method="POST" action="">
