--- a/web/ss/s/a-new.html
+++ b/web/ss/s/a-new.html
@@ -41,7 +41,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a href="http://cmais.com.br/godofredo-mau-e-a-gargalhada-fatal-castelo-ratimbum" target="_blank" title="Godofredo"><img src="../img/godofredo.gif" alt="Godoferdo" style="float: left; height: 50px;" /></a>
+          <a href="http://cmais.com.br/godofredo-mau-e-a-gargalhada-fatal-castelo-ratimbum" target="_blank" title="Godofredo"><img src="../img/godofredo.gif" alt="Godoferdo" style="float: left; height: 50px; padding: 3px 0px 3px 0px;" /></a>
           <a class="brand" href="http://cmais.com.br/godofredo-mau-e-a-gargalhada-fatal-castelo-ratimbum" target="_blank" title="Godofredo" style="float: left; margin-top: 5px;">
             Godofredo
           </a>
