--- a/web/concurso-cultural/vencedor649.html
+++ b/web/concurso-cultural/vencedor649.html
@@ -13,15 +13,13 @@
       table{
         position:relative;  
       }
-      span{
-        position: absolute;
-        bottom: 208px;
-        left: 309px;
-        font-size: 24px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight:bold;
-        color:#f8f372;
-      }
+	  td{
+	font-size: 20px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight:bold;
+	color:#f8f372;
+	text-align: center;
+	  }
     </style>
   </head>
   <body>
@@ -29,10 +27,20 @@
       
       <table border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td colspan="0">
-            <span>HAKEWYT3L649</span>
-            <img src="img/resultado.jpg" border="0" />
-          </td>
+          <td colspan="3">
+          	<img src="img/img01.jpg"></td>
+        </tr>
+        <tr>
+           <td width="310">
+             <img src="img/img02.jpg">	
+           </td>
+           <td width="185" bgcolor="#b10101">HAKEWYT3L649</td>
+           <td width="206">
+             <img src="img/img03.jpg"></td>
+        </tr>
+        <tr>
+          <td colspan="3">
+          	<img src="img/img04.jpg"></td>
         </tr>
       </table>
     </div>
