--- a/web/concurso-cultural/vencedor649.html
+++ b/web/concurso-cultural/vencedor649.html
@@ -26,15 +26,12 @@
           	<img src="img/img01.jpg"></td>
         </tr>
         <tr>
+          <td width="185" height="40" bgcolor="#b10101" style="text-align:center"><span style="color:#f8f372; font-family:Arial, Helvetica, sans-serif; font-weight:bold;text-align:center;font-size:18px; padding:15px;">HAKEWYT3L649</span></td>
+       </tr>
+        <tr>
            <td width="311">
              <img src="img/img02.jpg">	
            </td>
-           <td width="185" bgcolor="#b10101"><span style="color:#f8f372; font-family:Arial, Helvetica, sans-serif; font-weight:bold;text-align:center;">HAKEWYT3L649</span></td>
-           <td width="205">
-             <img src="img/img03.jpg"></td>
-        </tr>
-        <tr>
-          <td colspan="3"><img src="img/img04.jpg"></td>
         </tr>
       </table>
     </div>
