--- a/web/concurso-cultural/vencedorH67.html
+++ b/web/concurso-cultural/vencedorH67.html
@@ -8,20 +8,13 @@
         padding: 0;
       }
       .all {
-        margin: 0 auto;
+  margin: 0 auto;
       }
       table{
-        position:relative;  
+  position:relative;
+  text-align: right;
       }
-      span{
-        position: absolute;
-        bottom: 208px;
-        left: 310px;
-        font-size: 24px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight:bold;
-        color:#f8f372;
-      }
+
     </style>
   </head>
   <body>
@@ -29,10 +22,16 @@
       
       <table border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td colspan="0">
-            <span>NAKPAJNH4H67</span>
-            <img src="img/resultado.jpg" border="0" />
-          </td>
+          <td height="613" colspan="3">
+            <img src="img/img01a.jpg"></td>
+        </tr>
+        <tr>
+          <td width="185" height="40" bgcolor="#b10101" style="text-align:center"><span style="color:#f8f372; font-family:Arial, Helvetica, sans-serif; font-weight:bold;text-align:center;font-size:18px; padding:15px;">NAKPAJNH4H67</span></td>
+       </tr>
+        <tr>
+           <td width="311">
+             <img src="img/img02a.jpg"> 
+           </td>
         </tr>
       </table>
     </div>
