--- a/web/concurso-cultural/vencedorL9J.html
+++ b/web/concurso-cultural/vencedorL9J.html
@@ -38,3 +38,42 @@
     </div>
   </body>
 </html>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <title>cmais+ O portal de conteúdo da Cultura - C+ - Opinião</title>
+    <style type="text/css">
+      body {
+        background: #fff center top;
+        padding: 0;
+      }
+      .all {
+  margin: 0 auto;
+      }
+      table{
+  position:relative;
+  text-align: right;
+      }
+
+    </style>
+  </head>
+  <body>
+    <div class="all" align="center">
+      
+      <table border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td height="613" colspan="3">
+            <img src="img/img01a.jpg"></td>
+        </tr>
+        <tr>
+          <td width="185" height="40" bgcolor="#b10101" style="text-align:center"><span style="color:#f8f372; font-family:Arial, Helvetica, sans-serif; font-weight:bold;text-align:center;font-size:18px; padding:15px;">A369H33ELL9J</span></td>
+       </tr>
+        <tr>
+           <td width="311">
+             <img src="img/img02a.jpg"> 
+           </td>
+        </tr>
+      </table>
+    </div>
+  </body>
+</html>
