--- a/web/newsletter/telefilmes/220413/index.html
+++ b/web/newsletter/telefilmes/220413/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
       body {  padding: 0; background:url(images/bg.jpg) repeat;  }
       .all {  margin: 0 auto; }
-      table tr td img { margin: -2px 0 0 0 !important; padding: 0; border: none; }
+      table tr td img { margin: 0 !important; padding: 0; border: none; }
       table tr, table td, table area { border: none; margin: 0; padding: 0; }
       table td { line-height: 0pt; }
       .visualizar, 
