--- a/web/newsletter/telefilmes/220413/index.html
+++ b/web/newsletter/telefilmes/220413/index.html
@@ -11,7 +11,8 @@
       .visualizar a { color: #fff; font-family: Arial, Helvetica, Sans serif; font-size: 11px; }
     </style>
   </head>
-  <body style="padding: 0; background:url(images/bg.jpg) repeat;">
+  <body>
+    <div style="width:100%; padding: 0; background:url(images/bg.jpg) repeat;">
     <div class="all" align="center">
       <p class="visualizar">Caso não consiga visualizar este email, <a href="http://cmais.com.br/newsletter/telefilmes/220413/index.html" title="acesse este link">acesse este link.</a></p>
       <table border="0" cellspacing="0" cellpadding="0">
@@ -29,6 +30,6 @@
         </tr>
        </table>
     </div>    
-   
+    </div>
   </body>
 </html>
