--- a/web/newsletter/telefilmes/220413/index.html
+++ b/web/newsletter/telefilmes/220413/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>cmais+ O portal de conteúdo da Cultura - C+ - Opinião</title>
     <style type="text/css">
-      .all {  margin: 0 auto; }
+      .all {  margin: 0 auto; padding-bottom:10px; }
       table tr td img { margin: 0 !important; padding: 0; border: none; }
       table tr, table td, table area { border: none; margin: 0; padding: 0; }
       table td { line-height: 0pt; }
@@ -11,7 +11,7 @@
       .visualizar a { color: #fff; font-family: Arial, Helvetica, Sans serif; font-size: 11px; }
     </style>
   </head>
-  <body>
+  <body style="margin:0;">
     <div style="width:100%; padding: 0; background:url(images/bg.jpg) repeat;">
     <div class="all" align="center">
       <p class="visualizar">Caso não consiga visualizar este email, <a href="http://cmais.com.br/newsletter/telefilmes/220413/index.html" title="acesse este link">acesse este link.</a></p>
