--- a/web/newsletter/telefilmes/220413/index.html
+++ b/web/newsletter/telefilmes/220413/index.html
@@ -26,7 +26,7 @@
           <td  style="line-height: 0pt"><img src="images/img3.jpg" border="0" usemap="#Map3" /></td>
         </tr>
         <tr>
-          <td  style="line-height: 0pt"><img src="images/img4.jpg" border="0" usemap="#Map4" /></td>
+          <td  style="line-height: 0pt"><img src="images/img4.jpg" border="0" usemap="#Map4" /><br></td>
         </tr>
        </table>
     </div>    
