--- a/web/newsletter/telefilmes/220413/index.html
+++ b/web/newsletter/telefilmes/220413/index.html
@@ -26,9 +26,10 @@
           <td  style="line-height: 0pt"><img src="images/img3.jpg" border="0" usemap="#Map3" /></td>
         </tr>
         <tr>
-          <td  style="line-height: 0pt"><img src="images/img4.jpg" border="0" usemap="#Map4" /><br></td>
+          <td  style="line-height: 0pt"><img src="images/img4.jpg" border="0" usemap="#Map4" /></td>
         </tr>
        </table>
+       <p class="visualizar">Caso não queira receber esta newsletter, <a href="http://cmais.com.br/newsletter/telefilmes/220413/index.html" title="acesse este link">Clique aqui.</a></p>
     </div>    
     </div>
   </body>
