--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -11,7 +11,7 @@
       table tr { display: block; }
       .visualizar,
       .visualizar a {  color: #000;  font-family: Arial, Helvetica, Sans serif;  font-size: 11px;  }
-      .box { margin:40px auto 0; width: 475px;}
+      .box { margin:40px 0 0 60px !important; width: 475px;}
       
       .box h2 { text-transform:uppercase; color:#fff; text-align:center; font-size: 18px; margin-bottom:0;}
       .box span { background:url(img/divisao.png) repeat-x; height:7px; margin:0 auto; display:block; width:300px; }
@@ -21,7 +21,7 @@
       .box img { float:left; margin-right:10px; }
       .box img { width:100px; }
       .box li { float:left; list-style: none; width:auto; height: 83px; margin:0 12px 5px 0; }
-      .box ul {float:left;}
+      .box ul {float:left; margin-top:-5px;}
       .box li { *float:none; }
       .box li img { margin-right:0; margin-bottom:2px; border:3px solid #f7f1f1; border-radius:3px; -moz-border-radius: 3px; -webkit-border-radius: 3px;  }
       .box li a { display:block; text-align:center; font-size:14px; text-decoration:none; }
